--- a/WinePickerWeb/WinePickerWeb.csproj
+++ b/WinePickerWeb/WinePickerWeb.csproj
@@ -319,19 +319,19 @@
     <Content Include="Scripts\jstd-scenario-adapter.js" />
     <Content Include="Scripts\underscore.js" />
     <Content Include="Scripts\underscore.min.js" />
-    <Content Include="Scripts\WineApi\SearchResultsController.js" />
-    <Content Include="Scripts\WineApi\SearchResultsControllerSpec.js" />
-    <Content Include="Scripts\WineApi\WineApi.js" />
-    <Content Include="Scripts\WineApi\WineApiSpec.js" />
-    <Content Include="Scripts\WineApi\WineApiSpecRunner.html" />
-    <Content Include="Scripts\WineApi\WineDetailsController.js" />
-    <Content Include="Scripts\WineApi\WineDetailsControllerSpec.js" />
-    <Content Include="Scripts\WineApi\WinePickerApp.js" />
-    <Content Include="Scripts\WineApi\WinePickerController.js" />
-    <Content Include="Scripts\WineApi\WinePickerControllerSpec.js" />
-    <Content Include="Scripts\WineApi\WinePickerEndToEndTestRunner.html" />
-    <Content Include="Scripts\WineApi\WinePickerEndToEndTestScenarios.js" />
-    <Content Include="Scripts\WineApi\WinePickerSpecRunner.html" />
+    <Content Include="Scripts\WinePicker\SearchResultsController.js" />
+    <Content Include="Scripts\WinePicker\SearchResultsControllerSpec.js" />
+    <Content Include="Scripts\WinePicker\WineApi.js" />
+    <Content Include="Scripts\WinePicker\WineApiSpec.js" />
+    <Content Include="Scripts\WinePicker\WineApiSpecRunner.html" />
+    <Content Include="Scripts\WinePicker\WineDetailsController.js" />
+    <Content Include="Scripts\WinePicker\WineDetailsControllerSpec.js" />
+    <Content Include="Scripts\WinePicker\WinePickerApp.js" />
+    <Content Include="Scripts\WinePicker\WinePickerController.js" />
+    <Content Include="Scripts\WinePicker\WinePickerControllerSpec.js" />
+    <Content Include="Scripts\WinePicker\WinePickerEndToEndTestRunner.html" />
+    <Content Include="Scripts\WinePicker\WinePickerEndToEndTestScenarios.js" />
+    <Content Include="Scripts\WinePicker\WinePickerSpecRunner.html" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
