Fixed a bug re showing the progress bar when fetching product details. Also, we now show an external link png next to external links e.g. m

--- a/WinePickerWeb/WinePickerWeb.csproj
+++ b/WinePickerWeb/WinePickerWeb.csproj
@@ -136,6 +136,7 @@
     <Content Include="Content\bootstrap\img\glyphicons-halflings.png" />
     <Content Include="Content\bootstrap\js\bootstrap.js" />
     <Content Include="Content\bootstrap\js\bootstrap.min.js" />
+    <Content Include="Content\Images\Icon_External_Link.png" />
     <Content Include="Content\jasmine\jasmine.css" />
     <Content Include="Content\jasmine\jasmine_favicon.png" />
     <Content Include="Global.asax" />
