Split config, factory and directive bits into separate source files

--- a/WinePickerWeb/WinePickerWeb.csproj
+++ b/WinePickerWeb/WinePickerWeb.csproj
@@ -322,6 +322,9 @@
     <Content Include="Scripts\jstd-scenario-adapter.js" />
     <Content Include="Scripts\underscore.js" />
     <Content Include="Scripts\underscore.min.js" />
+    <Content Include="Scripts\WinePicker\WinePickerAppFactory.js" />
+    <Content Include="Scripts\WinePicker\WinePickerAppConfig.js" />
+    <Content Include="Scripts\WinePicker\WinePickerAppDirective.js" />
     <Content Include="Scripts\WinePicker\WineApiMenuData.js" />
     <Content Include="Scripts\WinePicker\SearchResultsController.js" />
     <Content Include="Scripts\WinePicker\JasmineTests\SearchResultsControllerSpec.js" />
