We now remember the slide number when returning to search results from wine details
Added a new directive to track the current slide number by binding to
the slid event of the carousel. Also, added a new SearchResultsModel
injectable for the SearchResultsController to maintain state between
different instances of SearchResultsController.

--- a/WinePickerWeb/WinePickerWeb.csproj
+++ b/WinePickerWeb/WinePickerWeb.csproj
@@ -322,6 +322,7 @@
     <Content Include="Scripts\jstd-scenario-adapter.js" />
     <Content Include="Scripts\underscore.js" />
     <Content Include="Scripts\underscore.min.js" />
+    <Content Include="Scripts\WinePicker\Models.js" />
     <Content Include="Scripts\WinePicker\WinePickerAppFactory.js" />
     <Content Include="Scripts\WinePicker\WinePickerAppConfig.js" />
     <Content Include="Scripts\WinePicker\WinePickerAppDirective.js" />
