--- a/WinePickerWeb/packages.config
+++ b/WinePickerWeb/packages.config
@@ -16,4 +16,5 @@
   <package id="Newtonsoft.Json" version="4.5.6" targetFramework="net40" />
   <package id="underscore.js" version="1.4.4" targetFramework="net40" />
   <package id="WebGrease" version="1.1.0" targetFramework="net40" />
+  <package id="WineApi" version="1.0.3" targetFramework="net40" />
 </packages>
