--- a/WinePickerWeb/WinePickerWeb.csproj
+++ b/WinePickerWeb/WinePickerWeb.csproj
@@ -328,12 +328,14 @@
     <Content Include="Scripts\jstd-scenario-adapter.js" />
     <Content Include="Scripts\underscore.js" />
     <Content Include="Scripts\underscore.min.js" />
+    <Content Include="Scripts\WinePicker\JasmineTests\WineApiProxySpec.js" />
     <Content Include="Scripts\WinePicker\JasmineTests\ModelsSpec.js" />
     <Content Include="Scripts\WinePicker\JasmineTests\UtilsSpec.js" />
     <Content Include="Scripts\WinePicker\JasmineTests\SearchCriteriaControllerSpec.js" />
     <Content Include="Scripts\WinePicker\SearchCriteriaController.js" />
     <Content Include="Scripts\WinePicker\Models.js" />
     <Content Include="Scripts\WinePicker\Utils.js" />
+    <Content Include="Scripts\WinePicker\WineApiProxy.js" />
     <Content Include="Scripts\WinePicker\WinePickerAppFactory.js" />
     <Content Include="Scripts\WinePicker\WinePickerAppConfig.js" />
     <Content Include="Scripts\WinePicker\WinePickerAppDirective.js" />
