--- a/WinePickerWeb/WinePickerWeb.csproj
+++ b/WinePickerWeb/WinePickerWeb.csproj
@@ -328,6 +328,7 @@
     <Content Include="Scripts\jstd-scenario-adapter.js" />
     <Content Include="Scripts\underscore.js" />
     <Content Include="Scripts\underscore.min.js" />
+    <Content Include="Scripts\WinePicker\EndToEndTests\WinePickerEndToEndTestHttpBackendSetup.js" />
     <Content Include="Scripts\WinePicker\JasmineTests\WineApiProxySpec.js" />
     <Content Include="Scripts\WinePicker\JasmineTests\ModelsSpec.js" />
     <Content Include="Scripts\WinePicker\JasmineTests\UtilsSpec.js" />
