We can now dynamically switch between WinePickerApp and WinePickerAppE2E
We use ?mode=e2etest to identify e2e tests. When in this mode we load a
couple of extra JS files and set the ng-app to WinePickerAppE2E. This
allows us to use the e2e $httpBackend to return fake responses to
wine.com API calls. These calls are normally proxied by the server (see
WineApiController).

--- a/WinePickerWeb/WinePickerWeb.csproj
+++ b/WinePickerWeb/WinePickerWeb.csproj
@@ -119,6 +119,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\BundleConfig.cs" />
+    <Compile Include="Filters\EndToEndTestDetectionFilter.cs" />
     <Compile Include="Controllers\WineApiController.cs" />
     <Compile Include="Controllers\WinePickerController.cs" />
     <Compile Include="Global.asax.cs">
