--- a/.jshintrc
+++ b/.jshintrc
@@ -12,16 +12,11 @@
 	"globals": {
 		"wineApi": true,
 		"WineApiProxy": true,
+		"winePicker": true,
 		"WinePickerController": true,
 		"SearchCriteriaController": true,
 		"SearchResultsController": true,
 		"WineDetailsController": true,
-		"WinePickerModel": true,
-		"SearchCriteriaModel": true,
-		"SearchResultsModel": true,
-		"WineDetailsModel": true,
-		"CriteriaFormatter": true,
-		"CriteriaParser": true,
 		"$": true,
 		"_": true,
 		"console": true,
